--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -27,15 +27,23 @@
                 </div>
 
                 <nav class="navegacion">
-                    <a href="#" class="navegacion__link"></a>
-                    <a href="#" class="navegacion__link"></a>
-                    <a href="#" class="navegacion__link"></a>
-                    <a href="#" class="navegacion__link"></a>
+                    <a href="#" class="navegacion__link">¿Qué es?</a>
+                    <a href="#" class="navegacion__link">¿Cómo Funciona?</a>
+                    <a href="#" class="navegacion__link">Precios</a>
+                    <a href="#" class="navegacion__link">Contratar</a>
                 </nav>
 
             </div>
 
             <div class="header__grid">
+<div class="header__texto">
+    <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
+    <a class="header__boton" href="#">Obtener Cuenta</a>
+</div>
+
+<div class="header__grafico">
+<img src="img/app_1.svg" alt="imagen nucleus app" class="header__imagen">
+</div>
 
             </div>
         </div>
