--- a/index.html
+++ b/index.html
@@ -36,49 +36,112 @@
             </div>
 
             <div class="header__grid">
-<div class="header__texto">
-    <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
-    <a class="header__boton" href="#">Obtener Cuenta</a>
-</div>
+                <div class="header__texto">
+                    <h1 class="header__heading">Recibe y realiza pagos en tu celular con nucleus</h1>
+                    <a class="header__boton" href="#">Obtener Cuenta</a>
+                </div>
 
-<div class="header__grafico">
-<img src="img/app_1.svg" alt="imagen nucleus app" class="header__imagen">
-</div>
+                <div class="header__grafico">
+                    <img src="img/app_1.svg" alt="imagen nucleus app" class="header__imagen">
+                </div>
 
             </div>
         </div>
     </header>
 
-<main class="nucleus">
- <h2 class="nucleus__heading"> Que es?</h2>
- <div class="nucleus__contenedor">
-    <div class="nucleus__grid">
-        <div class="nucleus__imagen">
-<img src="img/app_2.svg" alt="app nucleus">
+    <main class="nucleus">
+        <h2 class="nucleus__heading"> Que es?</h2>
+        <div class="nucleus__contenedor">
+            <div class="nucleus__grid">
+                <div class="nucleus__imagen">
+                    <img src="img/app_2.svg" alt="app nucleus">
+                </div>
+
+                <div class="listado">
+
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Facil</h2>
+                        <p class="listado__texto">Crea una cuenta, envia tu documentacion y comienza a utilizar nucleus
+                            en un par de horas</p>
+                    </div>
+
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Seguro</h2>
+                        <p class="listado__texto">Por su tecnologia digital nucleus es imposible de hackear o robar</p>
+                    </div>
+
+                    <div class="listado__elemento">
+                        <h2 class="listado__heading">Administrable</h2>
+                        <p class="listado__texto">Anade o transfiere fondos a tu banco, anade limites o controla tus
+                            gastos.</p>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
-
-<div class="listado">
-    <div class="listado__elemento">
-        <h2 class="listado__heading">Facil</h2>
-        <p class="listado__texto">Crea una cuenta, envia tu documentacion y comienza a utilizar nucleus en un par de horas</p>
-    </div>
-    <div class="listado__elemento">
-        <h2 class="listado__heading">Seguro</h2>
-        <p class="listado__texto">Por su tecnologia digital nucleus es imposible de hackear o robar</p>
-    </div>
-    <div class="listado__elemento">
-        <h2 class="listado__heading">Administrable</h2>
-        <p class="listado__texto">Anade o transfiere fondos a tu banco, anade limites o controla tus gastos.</p>
-    </div>
-</div>
-
-    </div>
- </div>
-</main>
+    </main>
 
 
+    <!-- SECCION SEGURIDAD -->
+
+    <section class="seguridad">
+        <div class="seguridad__contenedor">
+            <h2 class="seguridad__heading">Nucleus es seguro</h2>
+            <div class="seguridad__grid">
+                <div class="listado">
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Nucleus es seguro e imposible de clonar</p>
+                    </div>
+
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Utiliza tu cara o tu dedo para confirmar un deposito o
+                            registrar una cuenta
+                        </p>
+                    </div>
 
 
+                    <div class="listado__elemento">
+                        <p class="listado__texto">Paga en un establecimento con una tarjeta de credito que se desactiva
+                            una vez has hecho tu compra.
+                        </p>
+                    </div>
+                </div>
+                <div class="seguridad__imagen">
+                    <img src="img/seguridad.png" alt="seguridad nucleus">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SECCION COMISIONES -->
+
+    <section class="comisiones">
+        <div class="comisiones__contenedor">
+            <h2 class="comisiones__heading">Comisiones</h2>
+            <div class="comisiones__grid">
+                <div class="comisiones__contenido">
+                    <p class="comisiones__texto">
+                        Mientras mas veces utilices nucleus, menos pagas:
+                    </p>
+                    <div class="listado">
+                        <div class="listado__elemento listado__elemento--2col">
+                            <p class="listado__numero">3%</p>
+                            <p class="listado__texto">de todas tus transacciones si tus movimientos son menores a $999 USD.</p>
+                        </div>
+
+                        <div class="listado__elemento listado__elemento--2col">
+                            <p class="listado__numero">2.5%</p>
+                            <p class="listado__texto">de todas tus transacciones si tus movimientos son mayores a $999 USD.</p>
+                        </div>
+                    </div>
+                </div> <!--comisiones__contenido-->
+                <div class="comisiones__imagen">
+                    <img src="img/app_3.svg" alt="imagen app">
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
