se finaliza seccion testimonial

--- a/index.html
+++ b/index.html
@@ -127,12 +127,14 @@
                     <div class="listado">
                         <div class="listado__elemento listado__elemento--2col">
                             <p class="listado__numero">3%</p>
-                            <p class="listado__texto">de todas tus transacciones si tus movimientos son menores a $999 USD.</p>
+                            <p class="listado__texto">de todas tus transacciones si tus movimientos son menores a $999
+                                USD.</p>
                         </div>
 
                         <div class="listado__elemento listado__elemento--2col">
                             <p class="listado__numero">2.5%</p>
-                            <p class="listado__texto">de todas tus transacciones si tus movimientos son mayores a $999 USD.</p>
+                            <p class="listado__texto">de todas tus transacciones si tus movimientos son mayores a $999
+                                USD.</p>
                         </div>
                     </div>
                 </div> <!--comisiones__contenido-->
@@ -142,6 +144,50 @@
             </div>
         </div>
     </section>
+
+
+    <!-- SECCION TESTIMONIALES -->
+
+    <section class="testimoniales">
+        <div class="testimoniales__contenedor">
+            <h2 class="testimoniales__heading">Testimoniales</h2>
+
+            <div class="testimoniales__grid">
+                
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+
+                <div class="testimonial">
+                    <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
+                    <p class="testimonial__autor">- Geiner Sanchez</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 
 
 </body>
