--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <h2 class="testimoniales__heading">Testimoniales</h2>
 
             <div class="testimoniales__grid">
-                
+
                 <div class="testimonial">
                     <p class="testimonial__texto">Excelente app,muy sencillo de manejar y enviar dinero</p>
                     <p class="testimonial__autor">- Geiner Sanchez</p>
@@ -187,7 +187,22 @@
     </section>
 
 
+<footer class="footer">
+    <div class="footer__contenedor">
+        <div class="footer__grid">
+            <div class="footer__logo">
+                <img src="img/logo-blanco.svg" alt="logo blanco nucleus">
+            </div>
 
+            <nav class="navegacion">
+                <a href="#" class="navegacion__link navegacion__link--blanco">¿Qué es?</a>
+                <a href="#" class="navegacion__link navegacion__link--blanco">¿Cómo Funciona?</a>
+                <a href="#" class="navegacion__link navegacion__link--blanco">Precios</a>
+                <a href="#" class="navegacion__link navegacion__link--blanco">Contratar</a>
+            </nav>
+        </div>
+    </div>
+</footer>
 
 
 </body>
